--- a/OOSDDII/OOSDDII.vcxproj.filters
+++ b/OOSDDII/OOSDDII.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="DoctorLogin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sqlite3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Surgery.h">
