--- a/OOSDDII/OOSDDII.vcxproj.filters
+++ b/OOSDDII/OOSDDII.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="DoctorLogin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CreateDoctor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Surgery.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DoctorLogin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CreateDoctor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
